feat: 销售统计导出功能完美封板，支持财务级数据汇总 1.后端：集成 EasyExcel 3.3.2，实现 SalesExportVo 导出模型。 2.后端：在导出接口中增加多维数据权限检查，确保店员无法越权导出全局数据。 3.后端：增加“合计行”自动计算逻辑，支持原价小计、累计优惠和实收总额的自动汇总。 4.数据：同步更新包含完整销售明细与折扣记录的数据库备份脚本。